--- a/jessie/Dockerfile
+++ b/jessie/Dockerfile
@@ -11,7 +11,7 @@ FROM debian:jessie
 MAINTAINER Miracle
 
 #Docker Build Arguments
-ARG OPENWAF_VERSION="1.0.0β"
+ARG OPENWAF_VERSION="v1.0.0_beta"
 ARG OPENWAF_PREFIX="/opt"
 ARG OPENRESTY_PREFIX="/usr/local/openresty"
 ARG OPENRESTY_VERSION="1.13.6.2"
@@ -50,7 +50,7 @@ RUN apt-get install gcc make perl build-essential zlib1g-dev libgeoip-dev libncu
 #2. Install OpenWAF
 RUN cd ${OPENWAF_PREFIX} \  
     && apt-get install git swig -y \ 
-    && git clone https://github.com/titansec/OpenWAF.git \ 
+    && git clone --branch ${OPENWAF_VERSION} https://github.com/titansec/OpenWAF.git \ 
     && mv ${OPENWAF_PREFIX}/OpenWAF/lib/openresty/ngx_openwaf.conf /etc \ 
     && mv ${OPENWAF_PREFIX}/OpenWAF/lib/openresty/configure ${OPENWAF_PREFIX}/openresty-${OPENRESTY_VERSION} \ 
     && cp -RP ${OPENWAF_PREFIX}/OpenWAF/lib/openresty/* ${OPENWAF_PREFIX}/openresty-${OPENRESTY_VERSION}/bundle/ \ 
